feat: add animation

--- a/index.html
+++ b/index.html
@@ -27,31 +27,33 @@
     </header>
 
     <section class="module">
-      <h2 class="module__title">Now Buy Your <br> PIN or <span class="module__title title-highlight">Top Up</span> <br>
-        With Bank
-        Transfer</h2>
-      <div class="module__description">We Make international calling simple, relible, and cheap based on your unique
-        calling behavior.</div>
-      <div class="button module__button">Get Started</div>
-      <form class="search-form">
-        <input type="text" class="input search-form__input" placeholder="Where do you want to call?" />
-        <button class="button search-form__button search-icon"></button>
-      </form>
+      <div class="module__content">
+        <h2 class="module__title">Now Buy Your <br> PIN or <span class="module__title title-highlight">Top Up</span>
+          <br>
+          With Bank
+          Transfer
+        </h2>
+        <div class="module__description">We Make international calling simple, relible, and cheap based on your unique
+          calling behavior.</div>
+        <div class="button module__button">Get Started</div>
+        <form class="search-form">
+          <input type="text" class="input search-form__input" placeholder="Where do you want to call?" />
+          <button class="button search-form__button search-icon"></button>
+        </form>
+      </div>
 
-      <div class="scene-wrapper">
-        <div class="objects-and-image">
-          <div class="circle-and-flags">
-            <div class="circle"></div>
-            <div class="flag flag-s flag-1"></div>
-            <div class="flag flag-s flag-2"></div>
-            <div class="flag flag-m flag-3"></div>
-            <div class="flag flag-m flag-4"></div>
-            <div class="flag flag-l flag-5"></div>
-            <div class="flag flag-xl flag-6"></div>
-          </div>
-          <div class="circle-filled"></div>
-          <img class="hero-image" src="./assets/images/student-hero.png" alt="go global image">
+      <div class="scene">
+        <div class="circle-and-flags">
+          <div class="circle"></div>
+          <div class="flag flag-s flag-in flag-1"></div>
+          <div class="flag flag-s flag-se flag-2"></div>
+          <div class="flag flag-m flag-de flag-3"></div>
+          <div class="flag flag-m flag-it flag-4"></div>
+          <div class="flag flag-l flag-in flag-5"></div>
+          <div class="flag flag-xl flag-uk flag-6"></div>
         </div>
+        <div class="circle-filled"></div>
+        <img class="hero-image" src="./assets/images/student-hero.png" alt="go global image">
       </div>
     </section>
 
