feat: implement burger menu

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <nav>
         <ul class="header__links">
-          <li><a class="header__link header__link-active" href="#">Mobile Top Up</a></li>
+          <li><a class="header__link header__link_active" href="#">Mobile Top Up</a></li>
           <li><a class="header__link" href="#">About</a></li>
           <li><a class="header__link" href="#">Rate</a></li>
           <li><a class="header__link" href="#">Help</a></li>
@@ -31,6 +31,7 @@
           <div class="button-burger-icon__line"></div>
         </div>
       </div>
+      <div class="overlay"></div>
     </header>
 
     <section class="module">
