feat: fetch description from baconipsum

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
             class="module__title title-highlight">Top&nbsp;Up</span>
           With&nbsp;Bank&nbsp;Transfer
         </h2>
-        <div class="module__description">We Make international calling simple, relible, and cheap based on your unique
-          calling behavior.</div>
+        <div class="module__description"></div>
         <div class="button module__button">Get Started</div>
 
         <form class="search-form">
