feat: handle input

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <div class="button module__button">Get Started</div>
 
         <form class="search-form">
-          <input type="text" class="input search-form__input" placeholder="Where do you want to call?" maxlength="12" />
+          <input type="text" class="input search-form__input" placeholder="Where do you want to call?" minlength="4"
+            maxlength="12" />
           <button class="button search-form__button search-icon"></button>
         </form>
 
