--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <form class="search-form">
           <input type="text" class="input search-form__input" placeholder="Where do you want to call?" minlength="4"
             maxlength="12" />
-          <button class="button search-form__button search-icon"></button>
+          <button class="button search-form__button search-icon" type="submit"></button>
         </form>
 
         <div class="users">
